bk_ida/gobmkida/g3/redistribute_points
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/redistribute_points/src/engine/value_moves.c:3328:16: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
while ( v1 != &number_of_matches ); 
               ^~~~~~~~~~~~~~~~~
               number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/redistribute_points/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/redistribute_points/src/obj/1/value_moves.o] Error 1
